Review comment: use List.of instead of Arrays.asList
Signed-off-by: Laurent Garnier <lg.hc@free.fr>